external-crates/move/crates/move-compiler/tests/move_check/parser/function_acquires_missing_comma.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/function_acquires_missing_comma.move:5:25
  │
5 │     fun f() acquires X1 X2 {
  │                         ^^
  │                         │
  │                         Unexpected 'X2'
  │                         Expected ','

error[E03005]: unbound unscoped name
  ┌─ tests/move_check/parser/function_acquires_missing_comma.move:6:9
  │
6 │         borrow_global_mut<X1>(0x1);
  │         ^^^^^^^^^^^^^^^^^ Unbound function 'borrow_global_mut' in current scope

error[E03005]: unbound unscoped name
  ┌─ tests/move_check/parser/function_acquires_missing_comma.move:7:9
  │
7 │         borrow_global_mut<X2>(0x1);
  │         ^^^^^^^^^^^^^^^^^ Unbound function 'borrow_global_mut' in current scope

